new section on get involved

--- a/hugo/static/admin/config.yml
+++ b/hugo/static/admin/config.yml
@@ -129,6 +129,11 @@ collections:
               {label: "Body", name: "body", widget: "markdown"},
               {label: "Image", name: "image", widget: "image"}
             ]}
+          - {label: Champions, name: "champions", widget: "object", fields: [
+              {label: "Title", name: "title", widget: "string"}
+              {label: "Body", name: "content", widget: "markdown"}
+          ]}
+          
       - file: "hugo/content/privacy/_index.md"
         label: "Privacy Policy"
         name: "privacy"
