--- a/templates/package.json
+++ b/templates/package.json
@@ -3,17 +3,21 @@
   "devDependencies": {
     "assemble": "^0.24.3",
     "base-watch": "^0.1.3",
-    "browser-sync": "^2.24.5",
-    "del": "^3.0.0",
-    "gulp-autoprefixer": "^6.0.0",
+    "browser-sync": "^2.26.7",
+    "del": "^4.1.1",
+    "gulp-autoprefixer": "^6.1.0",
     "gulp-concat": "^2.6.1",
     "gulp-extname": "^0.2.2",
-    "gulp-include": "^2.3.1",
+    "gulp-include": "^2.4.1",
     "gulp-jshint": "^2.1.0",
-    "gulp-sass": "^4.0.1",
-    "gulp-uglify": "^3.0.0",
+    "gulp-sass": "^4.0.2",
+    "gulp-uglify": "^3.0.2",
     "handlebars-helpers": "^0.10.0",
-    "jshint": "^2.9.5",
+    "jshint": "^2.10.2",
     "jshint-stylish": "^2.2.1"
-  }
+  },
+  "browserslist": [
+    "last 1 version",
+    "> 1%"
+  ]
 }
