--- a/hugo/static/admin/config.yml
+++ b/hugo/static/admin/config.yml
@@ -227,7 +227,7 @@ collections:
           ]}
         ]}
   - name: "events"
-    label: "Events"
+    label: "Event"
     editor:
       preview: false
     folder: "hugo/content/events"
@@ -257,6 +257,14 @@ collections:
     editor:
       preview: false
     files:
+      - file: "hugo/content/_index.md"
+        label: "Header"
+        name: "header"
+        fields:
+          {label: Header Button, name: "header", widget: "object", fields: [
+          - {label: "Button Text", name: "buttonText", widget: "string"}
+          - {label: "Button Url", name: "buttonUrl", widget: "string"}
+          ]}
       - file: "hugo/content/global/_footer.md"
         label: "Footer"
         name: "footer"
