--- a/hugo/static/admin/config.yml
+++ b/hugo/static/admin/config.yml
@@ -21,6 +21,10 @@ collections:
               {label: "Classes", name: "classes", widget: "hidden", default: "home-header"},
               {label: "Header Text (optional)", name: "hero", widget: "markdown", required: false}
             ]}
+          - {label: "Button", name: "button", widget: "object", fields: [
+              label: "Header button text", name: "text", widget: "string",
+              label: "Header button URL", name: "url", widget: "string"              
+          ]}
           - {label: "What Is", name: "whatis", widget: "object", fields: [
               {label: "Heading", name: "heading", widget: "string"},
               {label: "Body", name: "body", widget: "markdown"},
@@ -257,12 +261,6 @@ collections:
     editor:
       preview: false
     files:
-      - file: "hugo/content/_index.md"
-        label: "Header"
-        name: "header"
-        fields:
-          - {label: "Button Text", name: "buttonText", widget: "string"}
-          - {label: "Button Url", name: "buttonUrl", widget: "string"}
       - file: "hugo/content/global/_footer.md"
         label: "Footer"
         name: "footer"
