--- a/hugo/static/admin/config.yml
+++ b/hugo/static/admin/config.yml
@@ -20,10 +20,10 @@ collections:
               {label: "Background (optional)", name: "background", widget: "image", required: false},
               {label: "Classes", name: "classes", widget: "hidden", default: "home-header"},
               {label: "Header Text (optional)", name: "hero", widget: "markdown", required: false}
-            ]}
-          - {label: "Button", name: "button", widget: "object", fields: [
-              {label: "Header button text", name: "text", widget: "string"},
-              {label: "Header button URL", name: "url", widget: "string"}              
+              {label: "Button", name: "button", widget: "object", fields: [
+                {label: "Header button text", name: "text", widget: "string"},
+                {label: "Header button URL", name: "url", widget: "string"}              
+              ]}
           ]}
           - {label: "What Is", name: "whatis", widget: "object", fields: [
               {label: "Heading", name: "heading", widget: "string"},
