--- a/hugo/static/admin/config.yml
+++ b/hugo/static/admin/config.yml
@@ -271,3 +271,10 @@ collections:
           - {label: "Row 3 (Internal link)", name: "row3", widget: "markdown"}
           - {label: "Row 4 (Mailing List)", name: "row4", widget: "markdown"}
           - {label: "Links", name: "links", widget: "markdown"}
+      - file: hugo/content/global/_nav.md
+        label: "Donation button on header"
+        name: "nav"
+        fields:
+          - {label: "Button Text", name: "buttontext", widget: "string"}
+          - {label: "Button Url", name: "buttonurl", widget: "string"}
+
