improved input box description events (#53)

--- a/hugo/static/admin/config.yml
+++ b/hugo/static/admin/config.yml
@@ -188,8 +188,8 @@ collections:
         name: "events"
         fields:
           - {label: "Title", name: "title", widget: "string"}
-          - {label: "Show on Get Involved", name: "showongetinvolved", widget: "boolean", defailt: false}
-          - {label: "Intro", name: "intro", widget: "markdown"}
+          - {label: "Show on Get Involved", name: "showongetinvolved", widget: "boolean", default: false}
+          - {label: "Paragraph about events (optional)", name: "intro", widget: "markdown", required: false}
           - {label: "Heading", name: "heading", widget: "text"}
           - {label: "Button", name: "button", widget: "object", fields: [
               {label: "URL (inc. http://)", name: "url", widget: "string"},
