--- a/templates/package.json
+++ b/templates/package.json
@@ -3,7 +3,7 @@
   "devDependencies": {
     "assemble": "^0.24.3",
     "base-watch": "^0.1.3",
-    "browser-sync": "^2.26.10",
+    "browser-sync": "^2.26.12",
     "del": "^5.1.0",
     "gulp-autoprefixer": "^7.0.1",
     "gulp-concat": "^2.6.1",
@@ -13,7 +13,11 @@
     "gulp-sass": "^4.1.0",
     "gulp-uglify": "^3.0.2",
     "handlebars-helpers": "^0.10.0",
-    "jshint": "^2.11.1",
+    "jshint": "^2.12.0",
     "jshint-stylish": "^2.2.1"
-  }
+  },
+  "browserslist": [
+    "last 1 version",
+    "> 1%"
+  ]
 }
