--- a/templates/package.json
+++ b/templates/package.json
@@ -3,18 +3,19 @@
   "devDependencies": {
     "assemble": "^0.24.3",
     "base-watch": "^0.1.3",
-    "browser-sync": "^2.26.12",
-    "del": "^5.1.0",
-    "gulp-autoprefixer": "^7.0.1",
+    "browser-sync": "^2.27.10",
+    "del": "^6.1.1",
+    "gulp-autoprefixer": "^8.0.0",
     "gulp-concat": "^2.6.1",
     "gulp-extname": "^0.2.2",
     "gulp-include": "^2.4.1",
     "gulp-jshint": "^2.1.0",
-    "gulp-sass": "^4.1.0",
+    "gulp-sass": "^5.1.0",
     "gulp-uglify": "^3.0.2",
     "handlebars-helpers": "^0.10.0",
-    "jshint": "^2.12.0",
-    "jshint-stylish": "^2.2.1"
+    "jshint": "^2.13.4",
+    "jshint-stylish": "^2.2.1",
+    "node-sass": "^7.0.1"
   },
   "browserslist": [
     "last 1 version",
